crates/toml/tests/snapshots/invalid/table/redefine-03.stderr
TOML parse error at line 4, column 8
  |
4 | [t1.t2.t3]
  |        ^^
duplicate key
